--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Designined by Kapil -->
+
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
@@ -29,9 +29,9 @@
           </div>
       </ul>
       <p align="right"> 
-        <a href="https://www.linkedin.com/in/kapil0123/" target="_blank" rel="noreferrer"> <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="bash" width="40" height="40"/> </a>
-        <a href="https://github.com/Kapil987" target="_blank" rel="noreferrer"> <img src="https://cdn.cdnlogo.com/logos/g/55/github.svg" alt="aws" width="40" height="40"/> </a> 
-        <a href="https://stackoverflow.com/users/13574624/kapil" target="_blank" rel="noreferrer"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ef/Stack_Overflow_icon.svg/768px-Stack_Overflow_icon.svg.png" alt="bash" width="40" height="40"/> </a> 
+        <a href="https://www.linkedin.com/in/loyer-baptiste/" target="_blank" rel="noreferrer"> <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="bash" width="40" height="40"/> </a>
+        <a href="https://github.com/BL-30" target="_blank" rel="noreferrer"> <img src="https://cdn.cdnlogo.com/logos/g/55/github.svg" alt="aws" width="40" height="40"/> </a> 
+        
     </p>
     </div>
     <div class="menu-btn">
@@ -44,14 +44,14 @@
    <div class="home-content">
      <div class="text">
        <div class="text-one">Hello,</div>
-       <div class="text-two">I'm Kapil</div>
-       <div class="text-three">DevOps Engineer</div>
-       <div class="text-four">From India</div>
+       <div class="text-two">I'm Baptiste</div>
+       <div class="text-three">Quantitative trader</div>
+       <div class="text-four">experience in France & UK</div>
      </div>
      <div class="button">
        <!-- <button>Hire Me </button> -->
        <!-- <a href="https://www.google.com"><button>Hire Me</button></a> -->
-       <a class="fcc-btn" href="https://www.linkedin.com/in/kapil0123/">Hire me</a>  
+       <a class="fcc-btn" href="https://www.linkedin.com/in/loyer-baptiste/">Hire me</a>  
      </div>
    </div>
  </section>
@@ -71,7 +71,7 @@
       Want to pursue a challenging career in an organization that utilizes me to my full potential and helps me to enhance my skills, ability, and knowledge.</p>
       <div class="button">
         <!-- <button>Download CV</button> -->
-        <a href="cv/kapil-Devops-6years.pdf"><button>Download CV</button></a>
+        <a href="Baptiste Loyer CV.pdf"><button>Download CV</button></a>
       </div>
     </div>
   </div>
@@ -184,7 +184,7 @@
       <p>Why wait, lets plan to connect. Connection and community improve engagement, retention, and well-being </p>
       <div class="button">
         <!-- <button>Let's Chat</button> -->
-        <a class="fcc-btn" href="https://www.linkedin.com/in/kapil0123/">Let's Chat</a>
+        <a class="fcc-btn" href="https://www.linkedin.com/in/loyer-baptiste">Let's Chat</a>
       </div>
     </div>
   </div>
