--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 <!-- Footer Section Start -->
 <footer>
   <div class="text">
-    <span>Created By <a href="#">Kapil</a> | &#169; 2022 All Rights Reserved</span>
+    <span>Created By <a href="#">Baptiste</a> | &#169; 2025 All Rights Reserved</span>
   </div>
 </footer>
 
