--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
      <div class="text">
        <div class="text-one">Hello,</div>
        <div class="text-two">I'm Baptiste</div>
-       <div class="text-three">Quantitative trader</div>
-       <div class="text-four">experience in France & UK</div>
+       <div class="text-three">Quant Trader</div>
+       <div class="text-four">with experiences and diplomas in France & UK</div>
      </div>
      <div class="button">
        <!-- <button>Hire Me </button> -->
@@ -66,8 +66,8 @@
       <img src="images/about.png" alt="">
     </div>
     <div class="right">
-      <div class="topic">Integration Is My Passion</div>
-      <p>Innovative DevOps Engineer with 6+ years of experience in designing, implementing, automating, and managing cutting-edge deployment of cloud resources. <br> <br>Skilled and Experienced in AWS Cloud Iaas, Saas, Pass, Teradata, Python, Linux, and DevOps tools such as Git, Jenkins, Terraform, Ansible, Docker, and Kubernetes. Strong engineering professional with a Bachelor of Technology focused in Electronics & Communication Engineering and a PG diploma in Embedded Systems Holder. <br> <br>
+      <div class="topic">Trading Is My Passion</div>
+      <p>Innovative Systematic Trader with 2+ years of experience in researching, implementing, automating, and managing cutting-edge trading strategies. <br> <br>Skilled and Experienced in Python, Equity Derivatives, Exotic and Hybrids options, C++, Bloomberg Terminal, Java, SQL. Strong engineering professional with a Bachelor of Sciences focused in Mathematics, Computer Sciences and Engineering (French scientific preparatory class) and PG diplomas in Mathematical, Computational Engineering and Quantitative Finance. <br> <br>
       Want to pursue a challenging career in an organization that utilizes me to my full potential and helps me to enhance my skills, ability, and knowledge.</p>
       <div class="button">
         <!-- <button>Download CV</button> -->
