--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
      <div class="text">
        <div class="text-one">Hello,</div>
        <div class="text-two">I'm Baptiste</div>
-       <div class="text-three">Quant Trader</div>
-       <div class="text-four">with experiences and diplomas in France & UK</div>
+       <div class="text-three">Maths and CS student</div>
+       <div class="text-four">with quant trading experiences and diplomas in France & UK</div>
      </div>
      <div class="button">
        <!-- <button>Hire Me </button> -->
