--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
      <div class="text">
        <div class="text-one">Hello,</div>
        <div class="text-two">I'm Baptiste</div>
-       <div class="text-three">Maths and CS student</div>
-       <div class="text-four">with quantitative finance experiences in France & UK</div>
+       <div class="text-three">Quantitative Trader</div>
+       <div class="text-four">2025 Graduate from Imperial College and IMT Atlantique (ex Telecom Bretagne)</div>
      </div>
      <div class="button">
        <!-- <button>Hire Me </button> -->
