--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
        <div class="text-one">Hello,</div>
        <div class="text-two">I'm Baptiste</div>
        <div class="text-three">Quantitative Trader</div>
-       <div class="text-four">2025 Graduate from Imperial College and IMT Atlantique (ex Telecom Bretagne)</div>
+       <div class="text-four">From France with 1y experience in the London, UK</div>
      </div>
      <div class="button">
        <!-- <button>Hire Me </button> -->
