--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
        <div class="text-one">Hello,</div>
        <div class="text-two">I'm Baptiste</div>
        <div class="text-three">Quantitative Trader</div>
-       <div class="text-four">From France with 2y experience in the London, UK</div>
+       <div class="text-four">From France 
+         with experience studying and working in London and Hong Kong</div>
      </div>
      <div class="button">
        <!-- <button>Hire Me </button> -->
