--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
        <div class="text-two">I'm Baptiste</div>
        <div class="text-three">Quantitative Trader</div>
        <div class="text-four">From France <br>
-        with experience studying and working in London and Hong Kong</div>
+       <div class="text-four">with experience studying and working in London and Hong Kong
+        </div>
      </div>
      <div class="button">
        <!-- <button>Hire Me </button> -->
