--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
        <div class="text-one">Hello,</div>
        <div class="text-two">I'm Baptiste</div>
        <div class="text-three">Quantitative Trader</div>
+       <div class="text-four">with experience studying and working in London and Hong Kong <br>
        <div class="text-four">From France <br>
-       <div class="text-four">with experience studying and working in London and Hong Kong
         </div>
      </div>
      <div class="button">
