--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
        <div class="text-two">I'm Baptiste</div>
        <div class="text-three">Quantitative Trader</div>
        <div class="text-four">with experience studying and working in London and Hong Kong <br>
-       <div class="text-four">From France <br>
+       <div class="text-five">From France <br>
         </div>
      </div>
      <div class="button">
