--- a/index.html
+++ b/index.html
@@ -160,6 +160,17 @@
        <div class="topic">Programming</div>
        <p>Python is an interpreted, object-oriented, high-level programming language with dynamic semantics</p>
      </div>
+
+<div class="box">
+  <div class="icon">
+    <!-- Replace Python logo with Scikit-Learn logo -->
+    <img src="sklearn.jpg" width="48" height="48" alt="Scikit-Learn Logo">
+  </div>
+  <div class="topic">Programming</div>
+  <p>Python is an interpreted, object-oriented, high-level programming language with dynamic semantics</p>
+</div>
+
+       
        <div class="box">
          <div class="icon">
            <!-- <i class="fas fa-tablet-alt"></i> -->
