--- a/index.html
+++ b/index.html
@@ -59,26 +59,53 @@
  </section>
 
 </div>
-<!-- About Section Start -->
-<section class="about" id="about">
-  <div class="content">
-    <div class="title"><span>About Me</span></div>
-  <div class="about-details">
-    <div class="left">
-      <img src="about.png" alt="">
+<!-- Home Section Start -->
+<section class="home" id="home">
+  <div class="home-content">
+    <!-- Logos added here -->
+    <div class="school-logos">
+      <img src="/mnt/data/imperial.png" alt="Imperial College London" class="school-logo">
+      <img src="/mnt/data/IMT_Atlantique_logo.png" alt="IMT Atlantique" class="school-logo">
+      <img src="/mnt/data/uni_paris.jpg" alt="Université de Paris" class="school-logo">
+      <img src="/mnt/data/avfqfm9mk.jpg" alt="Imperial College London" class="school-logo">
+      <img src="/mnt/data/hku.jpg" alt="University of Hong Kong" class="school-logo">
     </div>
-    <div class="right">
-      <div class="topic">Research and Trading Are My Passion</div>
-      <p>Innovative Systematic Trader with 2+ years of experience in researching, implementing, automating, and managing cutting-edge trading strategies. <br> <br>Skilled and Experienced in Python, Equity Derivatives, Exotic and Hybrids options, C++, Bloomberg Terminal, Java, SQL. Strong engineering professional with a Bachelor of Sciences focused in Mathematics, Computer Sciences and Engineering (French scientific preparatory class) and PG diplomas in Mathematical, Computational Engineering and Quantitative Finance. <br> <br>
-      Want to pursue a challenging career in an organization that utilizes me to my full potential and helps me to enhance my skills, ability, and knowledge.</p>
-      <div class="button">
-        <!-- <button>Download CV</button> -->
-        <a href="Baptiste Loyer CV.pdf"><button>Download CV</button></a>
+
+    <div class="text">
+      <div class="text-one">Hello,</div>
+      <div class="text-two">I'm Baptiste</div>
+      <div class="text-three">Quantitative Trader</div>
+      <div class="text-four">with experience studying and working in London and Hong Kong <br>
+        <div class="text-five">From France <br>
+        </div>
       </div>
     </div>
-  </div>
+    <div class="button">
+      <!-- <button>Hire Me </button> -->
+      <!-- <a href="https://www.google.com"><button>Hire Me</button></a> -->
+      <a class="fcc-btn" href="https://www.linkedin.com/in/loyer-baptiste/">Hire me</a>
+    </div>
   </div>
 </section>
+
+<style>
+  .home-content {
+    position: relative;
+  }
+
+  .school-logos {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    display: flex;
+    gap: 10px;
+  }
+
+  .school-logo {
+    width: 50px; /* Adjust the size as needed */
+    height: auto;
+  }
+</style>
 
 <!-- My Skill Section Start -->
 <!-- Section Tag and Other Div will same where we need to put same CSS -->
