--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
   </nav>
 
-<!-- Home Section Start -->
+<!-- Home Section Start1 -->
  <section class="home" id="home">
    <div class="home-content">
      <div class="text">
@@ -64,8 +64,8 @@
   <div class="home-content">
     <!-- Logos added here -->
     <div class="school-logos">
-      <img src="/mnt/data/imperial.png" alt="Imperial College London" class="school-logo">
-      <img src="/mnt/data/IMT_Atlantique_logo.png" alt="IMT Atlantique" class="school-logo">
+      <img src="/mnt/data/imperial.jpg" alt="Imperial College London" class="school-logo">
+      <img src="/mnt/data/IMT_Atlantique_logo.jpg" alt="IMT Atlantique" class="school-logo">
       <img src="/mnt/data/uni_paris.jpg" alt="Université de Paris" class="school-logo">
       <img src="/mnt/data/avfqfm9mk.jpg" alt="Imperial College London" class="school-logo">
       <img src="/mnt/data/hku.jpg" alt="University of Hong Kong" class="school-logo">
