--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
 
     <div class="text">
-      <div class="text-one">Hello,</div>
+      <div class="text-one">Hello2 ,</div>
       <div class="text-two">I'm Baptiste</div>
       <div class="text-three">Quantitative Trader</div>
       <div class="text-four">with experience studying and working in London and Hong Kong <br>
