--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
   <div class="home-content">
     <!-- Logos added here -->
     <div class="school-logos">
-      <img src="/mnt/data/imperial.jpg" alt="Imperial College London" class="school-logo">
-      <img src="/mnt/data/IMT_Atlantique_logo.jpg" alt="IMT Atlantique" class="school-logo">
-      <img src="/mnt/data/uni_paris.jpg" alt="Université de Paris" class="school-logo">
-      <img src="/mnt/data/avfqfm9mk.jpg" alt="Imperial College London" class="school-logo">
-      <img src="/mnt/data/hku.jpg" alt="University of Hong Kong" class="school-logo">
+      <img src="imperial.jpg" alt="Imperial College London" class="school-logo">
+      <img src="IMT_Atlantique_logo.jpg" alt="IMT Atlantique" class="school-logo">
+      <img src="uni_paris.jpg" alt="Université de Paris" class="school-logo">
+      <img src="avfqfm9mk.jpg" alt="Imperial College London" class="school-logo">
+      <img src="hku.jpg" alt="University of Hong Kong" class="school-logo">
     </div>
 
     <div class="text">
