--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
  </section>
 
 </div>
+  
 <!-- Home Section Start -->
 <section class="home" id="home">
   <div class="home-content">
@@ -72,7 +73,7 @@
     </div>
 
     <div class="text">
-      <div class="text-one">Hello3 ,</div>
+      <div class="text-one">Hello5,</div>
       <div class="text-two">I'm Baptiste</div>
       <div class="text-three">Quantitative Trader</div>
       <div class="text-four">with experience studying and working in London and Hong Kong <br>
@@ -81,14 +82,12 @@
       </div>
     </div>
     <div class="button">
-      <!-- <button>Hire Me </button> -->
-      <!-- <a href="https://www.google.com"><button>Hire Me</button></a> -->
       <a class="fcc-btn" href="https://www.linkedin.com/in/loyer-baptiste/">Hire me</a>
     </div>
   </div>
 </section>
 
-
+</div>
 
 <!-- My Skill Section Start -->
 <!-- Section Tag and Other Div will same where we need to put same CSS -->
