--- a/index.html
+++ b/index.html
@@ -59,7 +59,28 @@
  </section>
 
 </div>
-
+  
+<!-- About Section Start -->
+<section class="about" id="about">
+  <div class="content">
+    <div class="title"><span>About Me</span></div>
+  <div class="about-details">
+    <div class="left">
+      <img src="about.png" alt="">
+    </div>
+    <div class="right">
+      <div class="topic">Research and Trading Are My Passion</div>
+      <p>Innovative Systematic Trader with 2+ years of experience in researching, implementing, automating, and managing cutting-edge trading strategies. <br> <br>Skilled and Experienced in Python, Equity Derivatives, Exotic and Hybrids options, C++, Bloomberg Terminal, Java, SQL. Strong engineering professional with a Bachelor of Sciences focused in Mathematics, Computer Sciences and Engineering (French scientific preparatory class) and PG diplomas in Mathematical, Computational Engineering and Quantitative Finance. <br> <br>
+      Want to pursue a challenging career in an organization that utilizes me to my full potential and helps me to enhance my skills, ability, and knowledge.</p>
+      <div class="button">
+        <!-- <button>Download CV</button> -->
+        <a href="Baptiste Loyer CV.pdf"><button>Download CV</button></a>
+      </div>
+    </div>
+  </div>
+  </div>
+</section>
+  
 <!-- My Skill Section Start -->
 <!-- Section Tag and Other Div will same where we need to put same CSS -->
 <section class="skills" id="skills">
