--- a/index.html
+++ b/index.html
@@ -72,6 +72,15 @@
       <div class="topic">Research and Trading Are My Passion</div>
       <p>Innovative Systematic Trader with 2+ years of experience in researching, implementing, automating, and managing cutting-edge trading strategies. <br> <br>Skilled and Experienced in Python, Equity Derivatives, Exotic and Hybrids options, C++, Bloomberg Terminal, Java, SQL. Strong engineering professional with a Bachelor of Sciences focused in Mathematics, Computer Sciences and Engineering (French scientific preparatory class) and PG diplomas in Mathematical, Computational Engineering and Quantitative Finance. <br> <br>
       Want to pursue a challenging career in an organization that utilizes me to my full potential and helps me to enhance my skills, ability, and knowledge.</p>
+      
+      <div class="university-logos">
+        <img src="images/avfqfm9mk.jpg" alt="University Logo 1" class="uni-logo">
+        <img src="images/hku.jpg" alt="University Logo 2" class="uni-logo">
+        <img src="images/imperial.jpg" alt="University Logo 3" class="uni-logo">
+        <img src="images/IMT_Atlantique_logo.jpg" alt="University Logo 4" class="uni-logo">
+        <img src="images/uni_paris.jpg" alt="University Logo 5" class="uni-logo">
+      </div>
+      
       <div class="button">
         <!-- <button>Download CV</button> -->
         <a href="Baptiste Loyer CV.pdf"><button>Download CV</button></a>
