--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
        <div class="text-five">From France <br>
         </div>
      </div>
+
+    <div class="logos">
+      <img src="hku.png" alt="HKU Logo" width="80" height="80">
+      <img src="uni-paris.png" alt="University of Paris Logo" width="80" height="80">
+    </div>
+       
      <div class="button">
        <!-- <button>Hire Me </button> -->
        <!-- <a href="https://www.google.com"><button>Hire Me</button></a> -->
