--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
     <div class="logos">
       <img src="hku.png" alt="HKU Logo" width="80" height="80">
       <img src="uni-paris.png" alt="University of Paris Logo" width="80" height="80">
+      <img src="IMT_Atlantique_logo.png" alt="IMTA Logo" width="80" height="80">
+      <img src="avfqfm9mk.png" alt="Imperial Logo" width="80" height="80">
     </div>
        
      <div class="button">
