--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
       <img src="uni-paris.png" alt="University of Paris Logo" width="80" height="80">
       <img src="IMT_Atlantique_logo.png" alt="IMTA Logo" width="80" height="80">
       <img src="avfqfm9mk.png" alt="Imperial Logo" width="80" height="80">
+
+      <img src="ms.png" alt="MS Logo" width="80" height="80">
+      <img src="cdr.png" alt="CDR Logo" width="80" height="80">
     </div>
        
      <div class="button">
