--- a/index.html
+++ b/index.html
@@ -69,7 +69,28 @@
    </div>
  </section>
 
-</div>
+  <!-- test section -->
+<!-- New Logos Section Start -->
+<section class="affiliations">
+  <div class="universities">
+    <h3>Universities</h3>
+    <div class="logo-row">
+      <img src="hku.png" alt="HKU Logo" width="80" height="80">
+      <img src="uni-paris.png" alt="University of Paris Logo" width="80" height="80">
+      <img src="IMT_Atlantique_logo.png" alt="IMTA Logo" width="80" height="80">
+      <img src="avfqfm9mk.png" alt="Imperial Logo" width="80" height="80">
+    </div>
+  </div>
+
+  <div class="employers">
+    <h3>Ex-Employers</h3>
+    <div class="logo-row">
+      <img src="ms.png" alt="MS Logo" width="80" height="80">
+      <img src="cdr.png" alt="CDR Logo" width="80" height="80">
+      <!-- Add more employer logos here -->
+    </div>
+  </div>
+</section>
   
 <!-- About Section Start -->
 <section class="about" id="about">
