--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
        <div class="text-one">Hello,</div>
        <div class="text-two">I'm Baptiste</div>
        <div class="text-three">Quantitative Trader</div>
-       <div class="text-four">with experience studying and working in London and Hong Kong <br>
+       <div class="text-four">with experience studying & working in London and Hong Kong <br>
        <div class="text-five">From France <br>
         </div>
      </div>
