--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <img src="about.png" alt="">
     </div>
     <div class="right">
-      <div class="topic">Trading and Research Are My Passion</div>
+      <div class="topic">Trading and Research Are My Passions</div>
       <p>Innovative Systematic Trader with 2+ years of experience in researching, implementing, automating, and managing cutting-edge trading strategies. <br> <br>Skilled and Experienced in Python, Equity Derivatives, Exotic and Hybrids options, C++, Bloomberg Terminal, Java, SQL. Strong engineering professional with a Bachelor of Sciences focused in Mathematics, Computer Sciences and Engineering (French scientific preparatory class) and PG diplomas in Mathematical, Computational Engineering and Quantitative Finance. <br> <br>
       Want to pursue a challenging career in an organization that utilizes me to my full potential and helps me to enhance my skills, ability, and knowledge.</p>
       
