--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <!-- Home Section Start1 -->
  <section class="home" id="home">
-   <div class="home-content">
+   <div class="home">
      <div class="text">
        <div class="text-one">Hello,</div>
        <div class="text-two">I'm Baptiste</div>
